# buddharauer

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT_NOTES.md  IMPLEMENTATION_PROGRESS.md  NEXT_SESSION.md  NEXT_SESSION_GUIDE.md  NEXT_SESSION_PRIORITIES.md  NEXT_SESSION_START_HERE.md  NEXT_TASKS.md  README.md  SESSION_12_HANDOFF.md  SESSION_13_HANDOFF.md  SESSION_15_SUMMARY.md  SESSION_7_SUMMARY.md  SESSION_8_HANDOFF.md  SESSION_NOTES_2025-11-10_Session4.md  STATUS.md  fastagent.config.example.yaml  fastagent.config.yaml  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
data/metrics/2025-11-10/: chunk_extraction_duration_seconds.jsonl  global_test.jsonl  (+19 more)
data/recovery/: process_pdf_1762822392.json  process_pdf_1762823124.json  process_pdf_1762823176.json  process_pdf_1762823243.json  process_pdf_1762823523.json  process_pdf_1762823585.json  process_pdf_1762824035.json  process_pdf_1762824036.json  process_pdf_1762824090.json  process_pdf_1762826443.json  process_pdf_1762826576.json  process_pdf_1762826680.json  process_pdf_1762829015.json  process_pdf_1762847034.json  process_pdf_1763384531.json
docs/: ERROR_RECOVERY.md  IMPLEMENTATION_NOTES.md  NEXT_STEPS.md  PIPELINE_DOCUMENTATION.md  SESSION_5_SUMMARY.md  SESSION_6_SUMMARY.md
docs/archive/: VECTOR_STORE_TODO.md
docs/sessions/: session-16-summary.md
scripts/: create_embedding_issues.py  create_github_issues.py  create_phase1_issues.py
specs/: ENHANCEMENTS.md  IMPLEMENTATION_NOTES.md  README.md  SESSION_7_SUMMARY.md  architecture.md  data-processing-pipeline.md  implementation-phases.md  user-stories-detailed.md
src/agents/: __init__.py  analyst.py  orchestrator.py  retrieval.py  web_search.py
src/api/: __init__.py  dependencies.py  main.py
src/database/: document_registry.py  query_logger.py  vector_store.py
src/pipeline/: __init__.py  chunker.py  embeddings.py  embeddings_cache.py  monitoring.py  orchestrator.py  pdf_errors.py  pdf_extractor.py  recovery.py
src/utils/: __init__.py  config.py  fastagent_client.py  logging.py  paths.py
tests/: conftest.py
tests/integration/: test_api_basic.py  test_chat_endpoint.py
tests/unit/: __init__.py  test_analyst_agent.py  test_chunker.py  test_chunking_integration.py  test_config.py  test_document_registry.py  test_embeddings.py  test_embeddings_cache.py  test_embeddings_enhanced.py  test_fastagent_client.py  test_logging.py  test_monitoring.py  test_orchestrator.py  test_orchestrator_agent.py  test_paths.py  test_pdf_errors.py  test_pdf_extractor.py  test_recovery.py  test_retrieval_agent.py  test_vector_store.py  test_web_search_agent.py
(+118 files in other folders)
