[project]
name = "buddharauer"
version = "0.1.0"
description = "Local-first RAG application with Ollama, FastAPI, and Gradio"
authors = [
    {name = "cdolan24", email = "cdolan24@github.com"}
]
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "fast-agent-mcp>=0.3.17",
    "fastapi",
    "uvicorn",
    "gradio",
    "chromadb",
    "pymupdf",
    "pillow",
    "python-dotenv",
    "pyyaml",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=xml --cov-report=term-missing"

[tool.ruff]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
    "D"    # pydocstyle
]
ignore = ["D100", "D104"]  # Ignore missing module/package docstrings
line-length = 100
target-version = "py39"
src = ["src", "tests"]
extend-exclude = [
    "data/cache/*",
    "**/__pycache__",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:"
]
fail_under = 90